--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: pull_to_refresh
 description: a widget provided to the flutter scroll component drop-down refresh and pull up load.
 version: 1.2.0
-author: Jpeng <peng8350@gmail.com>
-homepage: https://github.com/peng8350/flutter_pulltorefresh
+author: jyp334 <jiyupeng@aragoncs.com>
+homepage: https://github.com/jyp334/flutter_pulltorefresh
 
 environment:
   sdk: ">=2.0.0-dev.28.0 <3.0.0"
